# DinrusX

./: DinrusX.upp  README.md  StdAfx.h  build_info.h
plugins/: CMakeLists.txt
plugins/DrxDefaultEntities/: DrxDefaultEntities.upp  IDefaultComponentsPlugin.h  PluginDll.cpp  PluginDll.h  StdAfx.h
plugins/DrxGamePlatform/Interface/: IGamePlatform.h  IPlatformAchievement.h  IPlatformLeaderboards.h  IPlatformLobby.h  IPlatformMatchmaking.h  IPlatformNetworking.h  IPlatformRemoteStorage.h  IPlatformServer.h  IPlatformStatistics.h  IPlatformUser.h  IPlatformUserGeneratedContent.h
plugins/DrxGamePlatform/Module/: StdAfx.h  resource.h
plugins/DrxPerceptionSystem/Interface/: IDrxPerceptionSystemPlugin.h  IPerceptionUpr.h
plugins/DrxPerceptionSystem/Module/: DrxPerceptionSystemPluginDLL.cpp  PerceptionActor.cpp  PerceptionActor.h  PerceptionFlowNodes.cpp  PerceptionFlowNodes.h  PerceptionUpr.cpp  PerceptionUpr.h  ScriptBind_PerceptionUpr.cpp  ScriptBind_PerceptionUpr.h  StdAfx.h
plugins/DrxSensorSystem/Interface/: IDrxSensorSystemPlugin.h  ISensorMap.h  ISensorSystem.h  ISensorTagLibrary.h  SensorBounds.h
plugins/DrxSensorSystem/Module/: DrxSensorSystemPluginDLL.cpp  DrxSensorSystemPluginDLL.h  OctreePlotter.h  OctreePlotter.inl  SchematycEntitySensorVolumeComponent.cpp  SchematycEntitySensorVolumeComponent.h  SensorMap.cpp  SensorMap.h  SensorSystem.cpp  SensorSystem.h  SensorTagLibrary.cpp  SensorTagLibrary.h  StdAfx.cpp  StdAfx.h
plugins/DrxUQS/Client/: CMakeLists.txt  ClientIncludes.h  wscript
plugins/DrxUQS/Core/: CMakeLists.txt  uqs_core.waf_files  wscript
(+7277 files in other folders)
